--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-    "NAME_MODULE": "Api de scrap",
+    "NAME_MODULE": "Api Scrap Instagram",
     "SERVER_URL": "http://localhost",
     "SERVER_PORT": 8001,
     "BASE_SERVER": "/scrap"
