--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parse": "^0.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "instagram-scraper": "^1.0.6"
+    "instagram-scraper": "^1.0.6",
+    "instagram-scraping": "^1.0.13"
   }
 }
