--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/wfsimao/Horsgle-Backup#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parse": "^0.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "instagram-scraper": "^1.0.6",
-    "instagram-scraping": "^1.0.13"
+    "instagram-scraping": "^1.0.13",
+    "instagrammer": "^1.0.10"
   }
 }
